# EmbeddedPlatforms

./: .gitmodules
Architectures/AVR/ModulaR/: bl.h  commsPacket.h  key.h  speck.c  speck.h  winTypes.h
Architectures/AVR/ModulaR/AVR/: Makefile  crt.S  flash.h  key.c  main.c  module.lkr  osccal.c  speck.c  usbconfig.h  usbdrv.c  usbdrv.h
Architectures/AVR/ModulaR/tool/: Makefile  decr_test.c  encrypt.c  uploader.c
Architectures/AVR/ModulaR/tool/ModulaR-encryptor-VisualStudio/: ModulaR-encryptor.vcproj
Architectures/AVR/ModulaR/tool/ModulaR-uploader-VisualStudio/: ModulaR.vcproj
Architectures/AVR/caraca/CARACA-CGI/: caraca_cgi.bas  caraca_cgi.vbp  cgi4vb.bas
Architectures/AVR/caraca/CARACA-DLL/: SerialLIb.mak  SerialLIb.mdp  SerialLIb.ncb  rs232int.cpp  rs232int.h  seriallib.cpp  seriallib.def  seriallib.h
Architectures/AVR/caraca/CARACA-VBTEST/: DllInterface.bas  Globali.bas  Profileset.bas  caraca.DCA  caraca.dsr  caraca.dsx  caraca.ini  caraca.mdb  caraca_test.frm  caraca_test.frx  caraca_test.vbp  frm_AssTable.frm  frm_config.frm  frm_setaddr.frm  frm_setup.frm
Architectures/AVR/caraca/caracad/: ANNOUNCE  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  acconfig.h  can_proto.c  canterm.pl  cantest.pl  caracad.c  configure.in  gcanterm  gcanterm.glade  globals.c  log.c  sensor_rrd.pl  sock.c  sock_proto.c
Architectures/AVR/caraca/caracad/client/: Makefile.am  caraca_client.c  caraca_client.h  caracadim.c
Architectures/AVR/caraca/caracad/debian/: changelog  conffiles1  control  copyright  dirs  files  init  postinst.debhelper  postrm.debhelper  prerm.debhelper  rules
Architectures/AVR/caraca/caracad/doc/: DESIGN
Architectures/AVR/caraca/caracad/examples/: Simple_mapping_config.pm  cansend  caracad_test.pl  key_mapping.conf  simple_mapping.pl  switch_light.pl
Architectures/AVR/caraca/caracad/include/: can_proto.h  caraca.h  caraca_client.h  caracad.h  config.h.in  debug.h  globals.h  log.h  version.h
Architectures/AVR/caraca/caracad/perl/: Caraca.pm  MANIFEST  Makefile.PL  README
Architectures/AVR/caraca/caracad/test/: node_check
Architectures/AVR/caraca/doc/: caraca_specification.txt
Architectures/AVR/caraca/firmware/: .cvsignore  Makefile  README  TODO  _config_star2.h  _rtc.s  can_config.h  canbus.e  canbus.h  canbus.s  config.h  config_dongle.h  config_dongle4433.h  config_node1.h  config_node2_skr.h  config_node_skr.h  config_star2.h  dongle.s  dongle2.eep  dongle2.rom  ds1621.e  ds1621.s  eeprom.e  eeprom.s  i2cbus.e  i2cbus.h  i2cbus.s  ir_rc5.s  ir_rc5.s.bak  kernel.e  kernel.h  kernel.s  macro.h  node.s  node2.eep  node2.rom  node2_action.s  node2_skr_action.s  node_skr.s  node_skr_action.s  (+10 more)
Architectures/AVR/uM0/: Makefile  mul_atmega.S  mul_attiny.S  test.c  uM0.hex  uart.S
Architectures/AVR/uM0/test/: test.c
Architectures/AVR/uracoli/: .cvsignore  .hgignore  .hgtags  LICENSE  Makefile  README.md  RELEASENOTES  SConscript_board  SConscript_general  SConstruct  bitbucket-pipelines.yml  todo.txt
Architectures/AVR/uracoli/.hg/: dirstate  hgrc  undo.desc
Architectures/AVR/uracoli/.hg/cache/: branch2-served  rbc-names-v1  rbc-revs-v1
Architectures/AVR/uracoli/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
Architectures/AVR/uracoli/Appnotes/: LICENSE  README
Architectures/AVR/uracoli/Appnotes/SensorNWK/: SConscript.old  SensorNWK.asciidoc  config.h
Architectures/AVR/uracoli/Appnotes/linuxtag2011/: 712_sensordatenerfassung.html  Makefile  README  block1.eps  blocks.odg  boards.odg  booklet.tex  callforpapers.txt  clt2011.cls  drahtlosesensoren.tex  hboards.odg  webserver.tex
Architectures/AVR/uracoli/Appnotes/linuxtag2012/: callforpapers.txt  callforposters.txt  lessons_learned.txt
Architectures/AVR/uracoli/Appnotes/pydude/: todo.txt
Architectures/AVR/uracoli/Appnotes/rfarduino/: epj_00.txt  epj_01.txt  mkreichelt.py  parts.txt  parts_reichelt_v1.1.txt  table.html
Architectures/AVR/uracoli/Appnotes/sniffer/: Sconstruct  setup.py
Architectures/AVR/uracoli/Config/: applications.cfg  board.cfg  docs.cfg  examples.cfg  packages.cfg  toolchains.cfg
Architectures/AVR/uracoli/Contrib/Arduino/: README.radiofaro  (+8 more)
Architectures/AVR/uracoli/Doc/: footer.html  gettingstarted.dox  header.html  layout.xml  main.dox  makerelease.txt  misc.dox  quarry.dox  readme-src.txt  trx.dox  uracoli-as6.dox  uracoli-hbm251.dox  uracoli-sterm.md  uracoli.css
Architectures/AVR/uracoli/Regression/: README  env_aw.cfg  env_aw_raspi.cfg  pytest.ini  test_arduino_pkg.py  test_fw_rdiag.py  test_fw_sniffer.py  test_fw_wibo.py  test_fw_wuart.py  test_fw_xmpl_hif.py  test_fw_xmpl_tsl2550.py  test_src_pkg.py  testenv.py
Architectures/AVR/uracoli/Templates/: app.mk  at86rf212.txt  at86rf230a.txt  at86rf230b.txt  at86rf231.txt  at86rf232.txt  at86rf233.txt  atmega_rfa1.txt  atmega_rfr2.txt  c  cproj  dox  doxyfile.in  h  halimbawa.cproj  halimbawa_main.c  mysensor.h  nodeaddr.py.in  py  sc  src.mk  update-apsfile.xsl  xmpl.aps
Architectures/AVR/uracoli/Tools/: Dockerfile  Dockerfile_full  board2ditaaa.py  board2nodecfg.py  boardcfg.py  cmdhash.py  diagradio.py  ds-allregs.py  ds2reg.py  dude_app.py  h2dot.py  lw_mesh.lua  makerelease.sh  mk2cproj.py  mk_arduino_package_index.py  p2p.pcap  radiofarogw_wrapper.py  scons_helpers.py  sterm.py  test-arduino.sh  test-sniffer.sh  testserver.py  wuarttest.py
Architectures/C51/CS8900A_8bit_bus/: CIRRUS.C  CIRRUS.H  Readme.txt
Architectures/C51/brady_source_aug7/: ANALOG.C  ANALOG.H  ARP.C  C8051F.H  CIRRUS.C  CIRRUS.H  CKSUM.A51  CKSUM.H  CS8900.A51  CS8900.H  ETH.C  ETH.H  HTTP.C  ICMP.C  IP.C  LINK.CMD  MAIN.C  MAKEFILE  NET.H  NET.HEX  NET.M51  NET.PJT  README.TXT  SERIAL.C  SERIAL.H  START.A51  Sieve.txt  TCP-Features.txt  TCP.C  TIMER.C  UDP.C  WEBDOC.C
Architectures/C51/devnet/: DEVNET.CPP
Architectures/C51/profibus_rev2/: AT89C52.h  Brad0008.gsd  Clean.bat  Hex-Change.bat  Intr.c  Main.c  Main.h  Makefile  Prof_pal.pds  Profibus.M51  Profibus.Opt  Profibus.Uv2  Profibus.lnp  Profibus.plg  Readme.txt  Spc3.c  Spc3.h  Util.c  Util.h  prof0.hex
(+2471 files in other folders)
